--- a/pages/game.html
+++ b/pages/game.html
@@ -9,14 +9,20 @@
     <link rel="stylesheet" href="../css/game.css">
 </head>
 <body>
-    <div class="grid">
+    <main>
+        <header>
+            <span class="player"></span>
+            <span>Tempo: <span class="timer">00</span></span>
+        </header>
+        <div class="grid">
+            <!-- <div class="card">
+                <div class="face front"></div>
+                <div class="face back"></div>
+            </div> -->
+        </div>
 
-        <!-- <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div> -->
-        
-    </div>
+        <a class="new-game" href="../index.html">Novo Jogo</a>
+    </main>
 
     <script src="../js/game.js"></script>
 </body>
