--- a/pages/game.html
+++ b/pages/game.html
@@ -21,7 +21,7 @@
             </div> -->
         </div>
 
-        <a class="new-game" href="../index.html">Novo Jogo</a>
+        <a class="new-game" href="../index.html" target="_blank">Novo Jogo</a>
         
     </main>
 
